objects/Account.object
<CustomObject>
    <fields>
        <fullName>Backlog_Amount__c</fullName>
        <formula>Total_Contract_Value__c -  Total_Invoiced_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backlog Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCMC__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account is available for trade if checked. A Customer is deactivated to prevent new Sales Orders and automatic Quotes from being created. A Supplier is deactivated to prevent new Purchase Orders from being created.</description>
        <inlineHelpText>Account is available for SCM trade  if checked</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCMC__Auto_Quote__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, the auto quote indicates whether we can automatically send a Quote to this Customer. This can be turned off to force a sales person to review the Quote and send it manually.</description>
        <inlineHelpText>When checked, the system is authorized to automatically create Quotes to this Customer.</inlineHelpText>
        <label>Auto Quote?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCMC__Bill_to_E_mail__c</fullName>
        <label>Bill-to E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SCMC__CAGE_Code__c</fullName>
        <label>CAGE Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Capability_Listing__c</fullName>
        <label>Capability Listing</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCMC__Certifications__c</fullName>
        <label>Certifications</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCMC__Corp_City__c</fullName>
        <description>Corporate City</description>
        <label>Corporate City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Corp_Country__c</fullName>
        <inlineHelpText>The country for the corporate address</inlineHelpText>
        <label>Corporate Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Corp_Line1__c</fullName>
        <description>First line of corporate address</description>
        <label>Corporate Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Corp_Line2__c</fullName>
        <description>Second line of corporate address</description>
        <label>Corporate Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Corp_PostalCode__c</fullName>
        <description>Postal code of address</description>
        <label>Corporate Zip / Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Corp_State_Province__c</fullName>
        <inlineHelpText>Enter the corporate state or province</inlineHelpText>
        <label>Corporate State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Credit_Card_Expiration_Date__c</fullName>
        <label>DEPRECATED: Credit Card Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCMC__Credit_Card_Number__c</fullName>
        <label>DEPRECATED: Credit Card Number</label>
        <length>18</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SCMC__Credit_Card_Type__c</fullName>
        <label>DEPRECATED: Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>Master Card</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCMC__Credit_Card_Validation_Code__c</fullName>
        <description>American Express (AMEX) -AMEX&apos;s code is a four-digit number on the front of the card above the credit card number. Visa - Visa&apos;s Card Verification Value (CVV) and MasterCard&apos;s Validation Code (CVC) are three-digit numbers on the back of the card.</description>
        <inlineHelpText>American Express (AMEX) -AMEX&apos;s code is a four-digit number on the front of the card above the credit card number. Visa - Visa&apos;s Card Verification Value (CVV) and MasterCard&apos;s Validation Code (CVC) are three-digit numbers on the back of the card.</inlineHelpText>
        <label>DEPRECATED: Credit Card Validation Code</label>
        <length>4</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SCMC__Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Currency for the Account.</description>
        <inlineHelpText>Currency for the Account.</inlineHelpText>
        <label>Currency</label>
        <referenceTo>SCMC__Currency_Master__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account_Currency_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCMC__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCMC__Customer_Site_Id__c</fullName>
        <description>This is a unique identifier for an Account. This field will be used in the creation of a Sales Order from a Quote to determine if the Quote came in from a known Customer.  This Id may be assigned in a foreign system - especially if the RFQ came from that foreign system</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a unique Id for this Account. If RFQs are retrieved from a foreign system, use the value for the site that the foreign system assigns.</inlineHelpText>
        <label>Customer Site Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Customer_Type__c</fullName>
        <inlineHelpText>Select Head Quarters if this account is the headquarters for the company.  Select Division if this account is a division of a company and select Subsidiary if this account is a subsidiary of another account.</inlineHelpText>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Division</fullName>
                </value>
                <value>
                    <fullName>Head Quarters</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCMC__Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if the account is a SCM customer account.</inlineHelpText>
        <label>Customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCMC__DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Default_Address__c</fullName>
        <formula>Name + BR()+
 SCMC__Corp_Line1__c +BR()+ 
SCMC__Corp_Line2__c+ IF(SCMC__Corp_Line2__c = &quot;&quot;, &quot;&quot;, BR() ) +
 SCMC__Corp_City__c + &apos;, &apos; +  SCMC__Corp_State_Province__c + &apos; &apos; + 
 SCMC__Corp_PostalCode__c  + &apos; &apos; +
 SCMC__Corp_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Default_Payment_Type__c</fullName>
        <description>The Customer&apos;s preferred method of payment for goods or services</description>
        <inlineHelpText>Select the Customer&apos;s preferred method of payment</inlineHelpText>
        <label>Default Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase Order</fullName>
                    <default>true</default>
                    <label>Purchase Order</label>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCMC__Discount_off_Standard__c</fullName>
        <description>The discount off standard prices.  During the pricing algorithm, if the price is a standard price, this discount is applied to come up with the price for the item.</description>
        <inlineHelpText>Enter the discount off the standard price for this Customer.</inlineHelpText>
        <label>Discount off Standard Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SCMC__E_Mail__c</fullName>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SCMC__FOB__c</fullName>
        <description>Destination, Origin, COD etc…</description>
        <inlineHelpText>Destination, Origin, COD etc…</inlineHelpText>
        <label>FOB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Freight__c</fullName>
        <description>Bill, Prepay, Collect etc…</description>
        <inlineHelpText>Bill, Prepay, Collect etc…</inlineHelpText>
        <label>Freight</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Invoice_Format__c</fullName>
        <description>If this customer requires a specific invoice format, enter the name of the Visualforce page that renders the invoice</description>
        <inlineHelpText>Enter the name of a Visualforce page that renders the invoice. You only need this if you have a specific invoice for this customer</inlineHelpText>
        <label>Invoice Format</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Language__c</fullName>
        <label>Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__No_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is set to indicate an RFQ coming into the system from this Account should be ignored.</description>
        <inlineHelpText>Select this flag if you do not want to return anything when a request for quote is received from this Account.</inlineHelpText>
        <label>No Response?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCMC__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCMC__Packslip_Format__c</fullName>
        <description>The name of a Visualforce page that renders a specific packslip for this Account.</description>
        <inlineHelpText>Enter the name of a Visualforce page that renders a packslip that is in a specific format for this Account. You do not need to enter anything here if you do not need a customer specific packslip.</inlineHelpText>
        <label>Packslip Format</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Payment_Terms_Name__c</fullName>
        <formula>SCMC__Payment_Terms__r.SCMC__Terms_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Payment_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specify default payment terms for this accout</inlineHelpText>
        <label>Payment Terms</label>
        <referenceTo>SCMC__PO_Payment_Terms__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCMC__Preferred_Communication__c</fullName>
        <description>The preferred communication vehicle for correspondence</description>
        <inlineHelpText>The preferred communication vehicle for correspondence</inlineHelpText>
        <label>Preferred Communication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E-Mail</fullName>
                    <default>true</default>
                    <label>E-Mail</label>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCMC__Price_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For customers and partners define a price typing that will govern how items are automatically priced.</inlineHelpText>
        <label>Price Type</label>
        <referenceTo>SCMC__Price_Type__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCMC__Provide_Advanced_Ship_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provide an advance ship notice for the customer if this is checked.</description>
        <inlineHelpText>Indicates whether an advanced ship notice is required or not.</inlineHelpText>
        <label>Provide Advanced Ship Notice?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCMC__Provide_Electronic_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, an electronic invoice is sent when a shipment to the customer is confirmed.</description>
        <inlineHelpText>Check this box if you want an electronic invoice sent to this customer whenever a shipment is confirmed.</inlineHelpText>
        <label>Provide Electronic Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCMC__Reason_for_Temporary_Hold__c</fullName>
        <label>Reason for Temporary Hold</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCMC__Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who is the sales rep for this Account</description>
        <inlineHelpText>The user who is the sales rep for this Account</inlineHelpText>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCMC__Sales_Responsibility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Sales Responsibility that looks after this Account.</description>
        <inlineHelpText>The Sales Responsibility that normally looks after this Account.</inlineHelpText>
        <label>Sales Responsibility</label>
        <referenceTo>SCMC__Sales_Responsibility__c</referenceTo>
        <relationshipLabel>Customer Sites (Sales Responsibility)</relationshipLabel>
        <relationshipName>SalesResponsibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCMC__Ship_Via__c</fullName>
        <description>Preferred Carrier</description>
        <inlineHelpText>Preferred Carrier</inlineHelpText>
        <label>Ship Via</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Shipping_Account__c</fullName>
        <inlineHelpText>Enter the account number to use when shipping to this customer.</inlineHelpText>
        <label>Shipping Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Small_Business_Designations__c</fullName>
        <label>Small Business Designations</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Standard_Order_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Last Standard Order Detail View</description>
        <label>Standard Order Detail</label>
        <referenceTo>SCMC__Standard_Order_Detail__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCMC__Tax_Exemption_Group__c</fullName>
        <label>Tax Exemption Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Temporary_Hold__c</fullName>
        <label>Temporary Hold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCMC__Terms__c</fullName>
        <label>Terms</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If orders for this customer are allocated from a specific warehouse, specify that warehouse here.</inlineHelpText>
        <label>Warehouse</label>
        <referenceTo>SCMC__Warehouse__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TextFieldTest__c</fullName>
        <label>TextFieldTest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <label>Total Contract Value</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Amount__c</fullName>
        <label>Total Invoiced Amount</label>
        <summarizedField>Invoice__c.Amount__c</summarizedField>
        <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Hours__c</fullName>
        <label>Total Invoiced Hours</label>
        <summarizedField>Invoice__c.Hours__c</summarizedField>
        <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__AverageDaysToPay__c</fullName>
        <description>Number of days the customer takes to pay on average, based on their payments in the last 365 days. The value in this field is automatically calculated.</description>
        <inlineHelpText>Number of days the customer takes to pay on average, based on their payments in the last 365 days. The value in this field is automatically calculated.</inlineHelpText>
        <label>Average Days to Pay</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountTradingCurrency__c</fullName>
        <label>Account Trading Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountsPayableControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A vendor must refer to a GLA for it to be used in making a posting. This association is inherited from the Accounting Dimension.</description>
        <label>Accounts Payable Control</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts (Accounts Payable Control Account)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountsReceivableControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An appropriate accounts receivable (or trade debtors) general ledger account.</description>
        <label>Accounts Receivable Control</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAllowDeleteInUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion of Account in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountName__c</fullName>
        <description>The name of the bank account</description>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountNumber__c</fullName>
        <description>The account number</description>
        <label>Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountReference__c</fullName>
        <description>The account reference, sometimes required for electronic transfers</description>
        <label>Bank Account Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankCity__c</fullName>
        <description>The city</description>
        <label>Bank City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankCountry__c</fullName>
        <description>The country</description>
        <label>Bank Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankFax__c</fullName>
        <description>The fax number</description>
        <label>Bank Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankIBANNumber__c</fullName>
        <description>The IBAN number</description>
        <label>Bank IBAN Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankName__c</fullName>
        <description>The name of the bank</description>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankPhone__c</fullName>
        <description>The bank phone number</description>
        <label>Bank Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankSWIFTNumber__c</fullName>
        <description>The SWIFT or similar number</description>
        <label>Bank SWIFT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankSortCode__c</fullName>
        <description>The sort code / bank identifier</description>
        <label>Bank Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankStateProvince__c</fullName>
        <description>The state / county / province</description>
        <label>Bank State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankStreet__c</fullName>
        <label>Bank Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankZipPostalCode__c</fullName>
        <description>The postal code</description>
        <label>Bank Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate1__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <label>Base Date 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Next Month</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
                <value>
                    <fullName>Start of Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate2__c</fullName>
        <description>The date on which terms will be calculated</description>
        <label>Base Date 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Next Month</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
                <value>
                    <fullName>Start of Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate3__c</fullName>
        <description>The date on which terms will be calculated</description>
        <label>Base Date 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Next Month</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
                <value>
                    <fullName>Start of Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODABillingAddressIsValid__c</fullName>
        <formula>NOT(ISBLANK(BillingStreet) &amp;&amp;
ISBLANK(BillingCity) &amp;&amp;
ISBLANK(BillingState) &amp;&amp;
ISBLANK(BillingPostalCode) &amp;&amp;
ISBLANK(BillingCountry)) &amp;&amp;
c2g__CODAValidatedBillingStreet__c == BillingStreet &amp;&amp;
c2g__CODAValidatedBillingCity__c == BillingCity &amp;&amp;
c2g__CODAValidatedBillingState__c == BillingState &amp;&amp;
c2g__CODAValidatedBillingPostCode__c == BillingPostalCode &amp;&amp;
c2g__CODAValidatedBillingCountry__c == BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODABillingMethod__c</fullName>
        <description>The billing method</description>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Self-billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODACreditAgency__c</fullName>
        <description>The name of the credit agency</description>
        <label>Credit Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditLimitEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to enable the credit limit</description>
        <label>Credit Limit Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditLimitReviewed__c</fullName>
        <description>The date when the limit was last reviewed</description>
        <label>Credit Limit Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditLimit__c</fullName>
        <description>The credit limit in org currency</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The manager responsible for the credit details</description>
        <label>Credit Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditRatingReviewed__c</fullName>
        <description>The date the rating was last reviewed</description>
        <label>Credit Rating Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditRating__c</fullName>
        <description>The rating given by the credit agency</description>
        <label>Credit Rating</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditReference__c</fullName>
        <description>The reference at the credit agency</description>
        <label>Credit Reference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditStatus__c</fullName>
        <description>The current credit status. The picklist is user-definable</description>
        <label>Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Allowed</fullName>
                    <default>true</default>
                    <label>Credit Allowed</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Cash with Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>